@@ -332,6 +332,7 @@ mdate3.test \
 mdate4.test \
 missing.test \
 missing2.test \
+missing3.test \
 mkinst2.test \
 mkinstall.test \
 mmodely.test \
