@@ -1,0 +1,49 @@
+#! /bin/sh
+# Copyright (C) 2004  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Test missing when running a tool's --version.
+
+. ./defs || exit 1
+
+set -e
+
+# b7cb8259 assumed not to exist.
+
+./missing b7cb8259 --version 2>stderr && exit 1
+grep . stderr && exit 1
+./missing b7cb8259 --grep 2>stderr && exit 1
+grep WARNING stderr
+
+./missing --run b7cb8259 --version && exit 1
+./missing --run b7cb8259 --grep 2>stderr && exit 1
+grep WARNING stderr
+
+# missing itself it known to exist :)
+
+./missing ./missing --version 2>stderr && exit 1
+grep . stderr && exit 1
+./missing ./missing --grep 2>stderr && exit 1
+grep WARNING stderr
+
+./missing --run ./missing --version 2>stderr
+grep . stderr && exit 1
+./missing --run ./missing --grep 2>stderr && exit 1
+grep WARNING stderr && exit 1
+grep Unknown stderr
