@@ -1,3 +1,14 @@
+2004-09-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/missing3.test: New file (check for Paolo's change below).
+	* tests/Makefile.am (TESTS): Add missing3.test.
+
+2004-09-07  Paolo Bonzini  <bonzini@gnu.org>
+
+	* missing: Handle all command line options together.  Add a
+	separate case statement to detect failed runs, and fail
+	silently there if --help or --version is passed to the program.
+
 2004-08-11  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/config.guess, lib/texinfo.tex: New upstream versions.
